Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34576

ListView.verticalVelocity and horizontalVelocity have a 0 value every other value change when using index based scrolling

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.9.3
    • 5.1.1, 5.2.0 Beta1
    • None
    • ArchLinux 64bit, Qt5.1

    Description

      With a ListView (which is a Flickable) one can trigger the 'flick' using keynavigation or setting the currentIndex

      This (might) triggers a flick/scroll on the Flickable.
      The resulting verticalVelocity and horizontalVelocity will jump back and forth between the actual value and 0.

      This makes it impossible to use SmoothedAnimation on for values based on this value.

      A work-around is as welcome as a fix

      See attachment to reproduce.
      key-navigation will trigger the problem, mouse-flicking not.
      currentIndex changes will also trigger to problem

      Attachments

        For Gerrit Dashboard: QTBUG-34576
        # Subject Branch Project Status CR V

        Activity

          People

            papetaja Pasi Petäjäjärvi
            nicolauz Thomas Senyk
            Votes:
            3 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes